# taurdp

./: README.md  package-lock.json  package.json  svelte.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  gui.rs  lib.rs  main.rs  rdp.rs
src/lib/: Canvas.svelte  Login.svelte
src/routes/: +page.svelte
src/routes/login/: +page.svelte
src/routes/view/: +page.svelte
