[package]
name = "taurdp"
version = "0.1.0"
description = "Tauri-based RDP client"
authors = ["Daniel Heater"]
license = "MIT"
repository = ""
default-run = "taurdp"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = ["rustls"]
rustls = ["ironrdp-tls/rustls"]
native-tls = ["ironrdp-tls/native-tls"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2", features = ["derive", "cargo"] }
inquire = "0.6.0"
ironrdp = { path = "../../IronRDP/crates/ironrdp", features = ["input", "graphics"]  }
ironrdp-graphics = { path = "../../IronRDP/crates/ironrdp-graphics" }
ironrdp-tls = { path = "../../IronRDP/crates/ironrdp-tls" }
ironrdp-tokio = { path = "../../IronRDP/crates/ironrdp-tokio" }
rustls = "0.21.1"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.10.0"
sspi = { version = "0.8.1", features = ["network_client"] }
tap = "1.0.1"
tauri = { version = "1.3.0", features = [] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
whoami = "1.4.0"
